--- a/configs/test/data_loader_test.yaml
+++ b/configs/test/data_loader_test.yaml
@@ -1,13 +1,13 @@
 TRAIN:
-  DATASET: imagenet
-  IM_SIZE: 224
+  DATASET: cifar10
+  IM_SIZE: 32
   BATCH_SIZE: 256
 TEST:
-  DATASET: imagenet
-  IM_SIZE: 256
+  DATASET: cifar10
+  IM_SIZE: 32
   BATCH_SIZE: 200
 DATA_LOADER:
-  BACKEND: dali_cpu
+  BACKEND: torch
   NUM_WORKERS: 4
 OUT_DIR: './experiments/test/data_loader_test'
 LOG_DEST: 'file'
