--- a/configs/search/MIGO_darts_cifar10.yaml
+++ b/configs/search/MIGO_darts_cifar10.yaml
@@ -3,11 +3,16 @@ SPACE:
   NUM_CLASSES: 10
 SEARCH:
   DATASET: 'cifar10'
-  SPLIT: [0.8, 0.2]
+  SPLIT: [0.9, 0.1]
   BATCH_SIZE: 256
   IM_SIZE: 32
 OPTIM:
-  STEPS: [48, 96]
+  BASE_LR: 0.5
+  MOMENTUM: 0.9
+  STEPS: [60, 120]
+  LR_POLICY: 'steps'
+  WARMUP_EPOCHS: 10
+  MAX_EPOCH: 400
 SNG:
   NAME: 'MIGO'
   THETA_LR: 0.1
@@ -16,7 +21,8 @@ SNG:
   UTILITY: 'log'
   UTILITY_FACTOR: 0.4
   MOMENTUM: True
-  GAMMA: 0.9
+  GAMMA: 0.5
+  PRUNING_STEP: 5
 DATA_LOADER:
   BACKEND: 'custom'
 OUT_DIR: '/userhome/project/XNAS/experiment/MIGO_test'
