add over all time

--- a/configs/search/MIGO_darts_cifar10.yaml
+++ b/configs/search/MIGO_darts_cifar10.yaml
@@ -3,16 +3,17 @@ SPACE:
   NUM_CLASSES: 10
 SEARCH:
   DATASET: 'cifar10'
-  SPLIT: [0.9, 0.1]
+  SPLIT: [0.5, 0.5]
   BATCH_SIZE: 256
   IM_SIZE: 32
 OPTIM:
-  BASE_LR: 0.5
+  BASE_LR: 0.1
   MOMENTUM: 0.9
   STEPS: [60, 120]
   LR_POLICY: 'step'
-  WARMUP_EPOCHS: 10
+  WARMUP_EPOCHS: 5
   MAX_EPOCH: 400
+  FINAL_EPOCH: 10
 SNG:
   NAME: 'MIGO'
   THETA_LR: 0.1
