--- a/configs/search/MIGO_darts_cifar10.yaml
+++ b/configs/search/MIGO_darts_cifar10.yaml
@@ -18,7 +18,7 @@ SNG:
   NAME: 'MIGO'
   THETA_LR: 0.1
   PRUNING: True
-  PROB_SAMPLING: False
+  PROB_SAMPLING: True
   UTILITY: 'log'
   UTILITY_FACTOR: 0.4
   MOMENTUM: True
