--- a/configs/search/pcdarts.yaml
+++ b/configs/search/pcdarts.yaml
@@ -4,6 +4,9 @@ SPACE:
   CHANNEL: 16
   LAYERS: 8
   NODES: 4
+DARTS:
+  ALPHA_LR: 6e-4
+  ALPHA_WEIGHT_DECAY: 1e-3
 DATA_LOADER:
   BACKEND: 'custom'
 SEARCH:
@@ -12,8 +15,12 @@ SEARCH:
   BATCH_SIZE: 256
   IM_SIZE: 32
   EVAL_PERIOD: 50
+  CHECKPOINT_PERIOD: 50
 OPTIM:
+  WEIGHT_DECAY: 3e-4
+  MOMENTUM: 0.9
   MAX_EPOCH: 50
   UNROLLED: False
+  MIN_LR: 0.0
 
 OUT_DIR: '/userhome/XNAS/experiment/pcdarts'
