--- a/configs/search/DrNAS/nb201_cifar10_Dirichlet.yaml
+++ b/configs/search/DrNAS/nb201_cifar10_Dirichlet.yaml
@@ -7,3 +7,7 @@ SEARCH:
   DATASET: 'cifar10'
   NUM_CLASSES: 10
   LOSS_FUN: "cross_entropy"
+DRNAS:
+  K: 1
+  REG_TYPE: "l2" # can be "kl" for Dirichlet
+  REG_SCALE: 1e-3
