--- a/configs/search/DrNAS/nb201_cifar10_GDAS.yaml
+++ b/configs/search/DrNAS/nb201_cifar10_GDAS.yaml
@@ -7,3 +7,16 @@ SEARCH:
   DATASET: 'cifar10'
   NUM_CLASSES: 10
   LOSS_FUN: "cross_entropy"
+  BATCH_SIZE: 64
+OPTIM:
+  BASE_LR: 0.025
+  MIN_LR: 0.001
+  MOMENTUM: 0.9
+  WEIGHT_DECAY: 3e-4
+  GRAD_CLIP: 5.0
+  MAX_EPOCH: 100
+DRNAS:
+  UNROLLED: False
+  METHOD: 'gdas'
+  TAU: [1, 10]
+RNG_SEED: 2
