--- a/configs/search/DrNAS/nb201_cifar10_GDAS.yaml
+++ b/configs/search/DrNAS/nb201_cifar10_GDAS.yaml
@@ -5,9 +5,13 @@ SPACE:
   NODES: 4
 SEARCH:
   DATASET: 'cifar10'
+  DATAPATH: "data/cifar10"
   NUM_CLASSES: 10
+  SPLIT: [0.5, 0.5]
   LOSS_FUN: "cross_entropy"
   BATCH_SIZE: 64
+DATA_LOADER:
+  NUM_WORKERS: 4
 OPTIM:
   BASE_LR: 0.025
   MIN_LR: 0.001
