--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ tmp/
 benchmark/
 test.py
 test.ipynb
-nohup.out
+nohup*.out
 
 # C extensions
 *.so
@@ -28,7 +28,7 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
+# lib/
 lib64/
 parts/
 sdist/
