--- a/configs/search/OFA/mbv3_cifar10/OFA_normal_phase1.yaml
+++ b/configs/search/OFA/mbv3_cifar10/OFA_normal_phase1.yaml
@@ -1,18 +1,22 @@
+# --------------
+# refer from:
+# https://github.com/skhu101/GM-NAS/blob/main/once-for-all-GM/train_ofa_net.py
+# --------------
+
 # OUT_DIR: '/userhome/project/XNAS/experiment/OFA/mbv3_cifar10/normal/phase1'
 OUT_DIR: '/home/binghan/XNAS/experiment/OFA/mbv3_cifar10/normal/phase1'
 NUM_GPUS: 1
 SPACE:
   NAME: 'ofa_mbv3'
 SEARCH:
-  DATASET: 'cifar10'
+  DATASET: 'imagenet'
   NUM_CLASSES: 10
   SPLIT: [0.5, 0.5]
-  BATCH_SIZE: 1024
+  BATCH_SIZE: 64
   MULTI_SIZES: [128,160,192,224]
   LOSS_FUN: 'cross_entropy_with_label_smoothing'
   LABEL_SMOOTH: 0.1
   # DATAPATH: 'TODO'
-  DATAPATH: './data/cifar10'
   # WEIGHTS: 'TODO'
   WEIGHTS: ''
   AUTO_RESUME: True
@@ -24,16 +28,19 @@ OFA:
   EXPAND_LIST: [6]
   DEPTH_LIST: [4]
   CHANNEL_DIVISIBLE: 8
+  SUBNET_BATCH_SIZE: 1  # [?]
+  KD_RATIO: 0.
+  # KD_PATH: "exp/OFA/teacher_model.pyth"
 OPTIM:
   MAX_EPOCH: 180
   BASE_LR: 0.1625
   WARMUP_EPOCH: 5
-  WARMUP_FACTOR: 0.2
+  WARMUP_FACTOR: 1
   LR_POLICY: 'cos'
   MOMENTUM: 0.9
   WEIGHT_DECAY: 3e-5
   OPTIM.NESTEROV: True
 TEST:
-  BATCH_SIZE: 1024
+  BATCH_SIZE: 256
   IM_SIZE: 224
 
