--- a/configs/search/SNG/DDPNAS_nasbench201_cifar10.yaml
+++ b/configs/search/SNG/DDPNAS_nasbench201_cifar10.yaml
@@ -10,6 +10,7 @@ LOADER:
   NUM_CLASSES: 10
 SEARCH:
   IM_SIZE: 32
+  EVALUATION: 'nasbench201'
 OPTIM:
   STEPS: [48, 96]
   BASE_LR: 0.025
@@ -28,7 +29,7 @@ SNG:
   SAMPLING_PER_EDGE: 1
   RANDOM_SAMPLE: True
   WARMUP_RANDOM_SAMPLE: True
-  BIGMODEL_SAMPLE_PROB: 0.5
+  BIGMODEL_SAMPLE_PROB: 0.
   BIGMODEL_NON_PARA: 2
   EDGE_SAMPLING: False
   EDGE_SAMPLING_EPOCH: -1
