--- a/configs/search/OFA/mbv3/depth_2.yaml
+++ b/configs/search/OFA/mbv3/depth_2.yaml
@@ -1,5 +1,3 @@
-# OUT_DIR: '/userhome/project/XNAS/experiment/OFA/mbv3_cifar10/kernel/phase1'
-OUT_DIR: '/home/binghan/XNAS/experiment/OFA/mbv3_cifar10/kernel/phase1'
 NUM_GPUS: 1
 SPACE:
   NAME: 'ofa_mbv3'
@@ -11,24 +9,21 @@ SEARCH:
   MULTI_SIZES: [128,160,192,224]
   LOSS_FUN: 'cross_entropy_with_label_smoothing'
   LABEL_SMOOTH: 0.1
-  # DATAPATH: 'TODO'
-  # WEIGHTS: '/userhome/project/XNAS/experiment/OFA/mbv3_cifar10/normal/phase1/checkpoints/model_epoch_0185.pyth'
-  WEIGHTS: '/home/binghan/XNAS/experiment/OFA/mbv3_cifar10/normal/phase1/checkpoints/model_epoch_0185.pyth'
   AUTO_RESUME: True
 OFA:
-  TASK: 'kernel'
-  PHASE: 1
+  TASK: 'depth'
+  PHASE: 2
   WIDTH_MULTI_LIST: [1.0]
   KS_LIST: [3,5,7]
   EXPAND_LIST: [6]
-  DEPTH_LIST: [4]
+  DEPTH_LIST: [2,3,4]
   CHANNEL_DIVISIBLE: 8
-  SUBNET_BATCH_SIZE: 1
+  SUBNET_BATCH_SIZE: 2
   KD_RATIO: 0.
   # KD_PATH: "exp/OFA/teacher_model.pyth"
 OPTIM:
   MAX_EPOCH: 120
-  BASE_LR: 3.0e-2
+  BASE_LR: 7.5e-3
   WARMUP_EPOCH: 5
   WARMUP_FACTOR: 1
   LR_POLICY: 'cos'
