--- a/configs/search/OFA/mbv3/normal_1.yaml
+++ b/configs/search/OFA/mbv3/normal_1.yaml
@@ -3,7 +3,7 @@
 # https://github.com/skhu101/GM-NAS/blob/main/once-for-all-GM/train_ofa_net.py
 # --------------
 
-NUM_GPUS: 1
+NUM_GPUS: 2
 SPACE:
   NAME: 'ofa_mbv3'
 LOADER:
@@ -11,6 +11,7 @@ LOADER:
   NUM_CLASSES: 1000
   SPLIT: [0.5, 0.5]
   BATCH_SIZE: 64
+  NUM_WORKERS: 4
 SEARCH:
   MULTI_SIZES: [128,160,192,224]
   LOSS_FUN: 'cross_entropy_smooth'
