--- a/configs/search/OFA/mbv3/depth_1.yaml
+++ b/configs/search/OFA/mbv3/depth_1.yaml
@@ -4,9 +4,9 @@ SPACE:
 LOADER:
   DATASET: 'imagenet'
   NUM_CLASSES: 1000
-  SPLIT: [0.5, 0.5]
-  BATCH_SIZE: 64
+  BATCH_SIZE: 128
   NUM_WORKERS: 4
+  USE_VAL: True
 SEARCH:
   MULTI_SIZES: [128,160,192,224]
   LOSS_FUN: 'cross_entropy_smooth'
@@ -25,7 +25,7 @@ OFA:
   # KD_PATH: "exp/OFA/teacher_model.pyth"
 OPTIM:
   MAX_EPOCH: 25
-  BASE_LR: 2.5e-3
+  BASE_LR: 5.e-3
   MIN_LR: 0.0
   WARMUP_EPOCH: 0
   WARMUP_FACTOR: 1.
