--- a/tests/configs/imagenet.yaml
+++ b/tests/configs/imagenet.yaml
@@ -1,8 +1,9 @@
 LOADER:
   DATASET: 'imagenet'
-  SPLIT: [0.5, 0.5]
   BATCH_SIZE: 64
   NUM_CLASSES: 1000
-  # NUM_WORKERS: 1
+  USE_VAL: True
+  NUM_WORKERS: 4
+NUM_GPUS: 2
 SEARCH:
   MULTI_SIZES: [160, 192, 224]
