modify configuration files

--- a/configs/search/OFA/mbv3/normal_1.yaml
+++ b/configs/search/OFA/mbv3/normal_1.yaml
@@ -38,7 +38,7 @@ OPTIM:
   LR_POLICY: 'cos'
   MOMENTUM: 0.9
   WEIGHT_DECAY: 3.e-5
-  OPTIM.NESTEROV: True
+  NESTEROV: True
 TEST:
   BATCH_SIZE: 256
   IM_SIZE: 224
