--- a/configs/search/spos_spos_cifar10.yaml
+++ b/configs/search/spos_spos_cifar10.yaml
@@ -4,11 +4,16 @@ LOADER:
   DATASET: 'cifar10'
   NUM_CLASSES: 10
   SPLIT: [0.5, 0.5]
-  BATCH_SIZE: 64
+  BATCH_SIZE: 96
 SEARCH:
   IM_SIZE: 32
+  # LABEL_SMOOTH: 0.1
 SPOS:
   RESIZE: True
   LAYERS: 20
   NUM_CHOICE: 4
+OPTIM:
+  MAX_EPOCH: 600
+  BASE_LR: 0.025
+  WEIGHT_DECAY: 3.e-4
 OUT_DIR: 'exp/spos'
