--- a/configs/search/spos_nasbench201_cifar10.yaml
+++ b/configs/search/spos_nasbench201_cifar10.yaml
@@ -6,7 +6,7 @@ SPACE:
 LOADER:
   DATASET: 'cifar10'
   NUM_CLASSES: 10
-  SPLIT: [0.5, 0.5]
+  # SPLIT: [0.5, 0.5]
   BATCH_SIZE: 128
 SEARCH:
   IM_SIZE: 32
@@ -18,7 +18,7 @@ SPOS:
 OPTIM:
   BASE_LR: 0.025
   MIN_LR: 0.001
-  WEIGHT_DECAY: 3.e-4
+  WEIGHT_DECAY: 1.e-4
   LR_POLICY: 'cos'
   MAX_EPOCH: 50
 OUT_DIR: 'exp/spos_201'
