--- a/configs/search/spos_spos_cifar10.yaml
+++ b/configs/search/spos_spos_cifar10.yaml
@@ -3,7 +3,7 @@ SPACE:
 LOADER:
   DATASET: 'cifar10'
   NUM_CLASSES: 10
-  SPLIT: [0.5, 0.5]
+  # SPLIT: [0.5, 0.5]
   BATCH_SIZE: 96
 SEARCH:
   IM_SIZE: 32
