bug fixing for BigNAS

--- a/configs/search/BigNAS/train.yaml
+++ b/configs/search/BigNAS/train.yaml
@@ -13,8 +13,9 @@ OPTIM:
   GRAD_CLIP: 1.
   WARMUP_EPOCH: 5
   MAX_EPOCH: 360
+  LR_POLICY: "step"
   WEIGHT_DECAY: 1.e-5
-  BASE_LR: 0.15
+  BASE_LR: 0.256
   NESTEROV: True
 SEARCH:
   LOSS_FUN: "cross_entropy_smooth"
@@ -28,62 +29,62 @@ BIGNAS:
   BN_EPS: 1.e-5
   POST_BN_CALIBRATION_BATCH_NUM: 64
   SUPERNET_CFG:
-    use_v3_head: True
-    resolutions: [192, 224, 256, 288]
-    first_conv: 
-      c: [16, 24]
+    use_v3_head: False
+    resolutions: [192, 224, 288, 320]
+    first_conv:
+      c: [32, 40]
       act_func: 'swish'
       s: 2
     mb1:
       c: [16, 24]
       d: [1, 2]
-      k: [3, 5]
+      k: [3]
       t: [1]
       s: 1
       act_func: 'swish'
-      se: False
+      se: True
     mb2:
       c: [24, 32]
-      d: [3, 4, 5]
-      k: [3, 5]
-      t: [4, 5, 6]
+      d: [2, 3]
+      k: [3]
+      t: [6]
       s: 2
       act_func: 'swish'
-      se: False
+      se: True
     mb3:
-      c: [32, 40] 
-      d: [3, 4, 5, 6]
+      c: [40, 48] 
+      d: [2, 3]
       k: [3, 5]
-      t: [4, 5, 6]
+      t: [6]
       s: 2
       act_func: 'swish'
       se: True
     mb4:
-      c: [64, 72] 
-      d: [3, 4, 5, 6]
+      c: [80, 88] 
+      d: [2, 3, 4]
       k: [3, 5]
-      t: [4, 5, 6]
+      t: [6]
       s: 2
       act_func: 'swish'
-      se: False
+      se: True
     mb5:
       c: [112, 120, 128] 
-      d: [3, 4, 5, 6, 7, 8]
+      d: [2, 3, 4, 5, 6]
       k: [3, 5]
-      t: [4, 5, 6]
+      t: [6]
       s: 1
       act_func: 'swish'
       se: True
     mb6:
       c: [192, 200, 208, 216] 
-      d: [3, 4, 5, 6, 7, 8]
+      d: [2, 3, 4, 5, 6]
       k: [3, 5]
       t: [6]
       s: 2
       act_func: 'swish'
       se: True
     mb7:
-      c: [216, 224] 
+      c: [320, 352] 
       d: [1, 2]
       k: [3, 5]
       t: [6]
@@ -91,5 +92,5 @@ BIGNAS:
       act_func: 'swish'
       se: True
     last_conv:
-      c: [1792, 1984]
+      c: [1280, 1408]
       act_func: 'swish'
