modify configurations for BigNAS

--- a/configs/search/BigNAS/eval.yaml
+++ b/configs/search/BigNAS/eval.yaml
@@ -12,6 +12,8 @@ LOADER:
 SEARCH:
   IM_SIZE: 224
   WEIGHTS: "exp/search/test/checkpoints/best_model_epoch_0009.pyth"
+TEST:
+  IM_SIZE: 224
 BIGNAS:
   BN_MOMENTUM: 0.1
   BN_EPS: 1.e-5
